--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
+          fetch-depth: 0
           node-version: '16'
 
       - name: Install dependencies
