--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Run JS script to log commit info
         run: node ./actions_job/CommitLog.js
         env:
-          GITHUB_EVENT_PATH: ${{ github.event_path }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
