--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -19,6 +19,29 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install GitHub CLI
+        run: |
+          sudo apt update
+          sudo apt install gh
+
+      - name: Authenticate with GitHub CLI
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+
+
+      - name: Authenticate with GitHub CLI
+        run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+      
+      - name: Get PR number
+        id: get_pr_number
+        run: |
+          echo "PR_NUMBER=${{ github.event.pull_request.number }}" >> $GITHUB_ENV
+
+      - name: Fetch PR commits
+        run: |
+          gh pr view ${{ env.PR_NUMBER }} --json commits > pr_commits.json
+
       - name: Get branch name
         run: echo "BRANCH_NAME=${{ github.head_ref }}" >> $GITHUB_ENV
 
@@ -27,7 +50,5 @@ jobs:
         env:
           BRANCH_NAME: ${{ env.BRANCH_NAME }}
 
-      - name: Run JS script to log commit info
-        run: node ./actions_job/CommitLog.js
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run JavaScript to show branch name
+        run: node ./actions_job/handle_commits.js
