GitHub Action: Update permissions for pull request handling

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -1,6 +1,10 @@
 name: Run Make Pull Request Report
 on: pull_request
 
+permissions:
+  pull-requests: write
+  contents: read
+
 jobs:
   first-job:
     runs-on: ubuntu-latest
