--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "sample_react-project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@octokit/rest": "^18.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@octokit/rest": "^18.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.10"
   }
 }
