--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "sample_react-project",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffmpeg/util": "^0.12.1",
     "@octokit/rest": "^18.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "fluent-ffmpeg": "^2.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
