--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -70,6 +70,26 @@ jobs:
           name: PRのレビューをゆっくり解説
           path: output.mp4
 
+      # Download the video (to prepare it for commenting)
+      - name: Download video artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: PRのレビューをゆっくり解説
+
+      # Install GitHub CLI
+      - name: Install GitHub CLI
+        uses: actions/setup-gh@v3
+
+      # Comment on the PR with the uploaded video link
+      - name: Comment on the PR
+        run: |
+          PR_URL=$(gh pr view ${{ github.event.pull_request.number }} --json url --jq '.url')
+          gh pr comment ${{ github.event.pull_request.number }} --body "Here is the review video: [PRのレビューをゆっくり解説](./output.mp4)"
+
+      # Optionally, you can remove the artifact after posting
+      - name: Remove uploaded artifact
+        run: rm output.mp4
+
       - name: Comment on PR
         uses: peter-evans/create-or-update-comment@v2
         with:
